# parse_zone

./: README.md  example.zone  example2.zone  parse_zone.py  pylintrc  pyproject.toml
