[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parse_zone"
dynamic = ["version"]
license = "MIT"

authors = [
    { name = "Shumon Huque", email = "shuque@gmail.com" },
]
description = "Parse DNS zone file"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shuque/parse_zone"
Issues = "https://github.com/shuque/parse_zone/issues"

[tool.setuptools]
py-modules = []
script-files = ['parse_zone.py']

[tool.setuptools.dynamic]
version = {attr = "parse_zone.__version__"}
